--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
-# These are supported funding model platforms
+# You can sponsor
 
-github: [h9zdev]
-custom: [https://haybnz.web.app/tip.html?utm_source=haybnz.web.app]
+github: [h9zdev] # GitHub Sponsors-enabled username for https://github.com/haybnzz/HadesConnect
+custom: [https://haybnz.web.app/tip.html] # Custom Monero donation link and address
