--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,11 @@
 name = "wiretapper"
 version = "0.0.0"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "Flask>=2.3,<4",
+    "requests>=2.31,<3",
+    "python-dotenv>=1.0,<2",
+]
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
